2009-12-11  Rik  <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: remove install-local target and use automake 
	syntax to install doc-cache file.

2009-12-10  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Replace distdir-local with dist-hook rule as it
	is better supported by automake.

2009-12-10  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: new distdir-local rule to check for presence of
	necessary libraries before packaging distribution

2009-12-08  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Distribute all generated documentation (.pdf,
	.ps, .html, .dvi) to remove build requirement for TexInfo

2009-12-07  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am, faq/Makefile.am, liboctave/Makefile.am: Document
	use of NOTPARALLEL directive.

2009-12-07  Rik <octave@nomad.inbox5.com>

	* refcard/Makefile.am: Add CLEANFILES and MAINTAINERCLEANFILES objects to
	properly clean directory.

2009-12-05  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Set dependency of *.texi files on
	munge-texi source code rather than executable.

2009-12-04  Rik <octave@nomad.inbox5.com>

	* interpreter/images.awk: Revert to using Ghostscript for documentation
	pdf image creation rather than Octave.

2009-12-04  Rik <octave@nomad.inbox5.com>

	* Makefile.am, interpreter/Makefile.am, liboctave/Makefile.am: remove
	  lingering configuration support for conf.texi
	* liboctave/Makefile.am: distribute .texi files

2009-12-04  Rik <octave@nomad.inbox5.com>

	* interpreter/geometryimages.m, interpreter/interpimages.m,
	  interpreter/sparseimages.m, interpreter/plotimages.m:
	  Switch to color output for PostScript documentation images

2009-12-04  Rik <octave@nomad.inbox5.com>

	* interpreter/geometryimages.m, interpreter/interpimages.m,
	  interpreter/sparseimages.m, interpreter/plotimages.m:
	  Set default paperorientation to landscape to stop warning message

2009-12-04  Ben Abbott <bpabbott@mac.com>
